Updated the Daffodil stack parameter groups, parameter names, and parameter descriptions